web: added button to open bought books

--- a/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.css
+++ b/LivroMente_FRONT/src/app/views/user-profile/user-profile.component.css
@@ -129,3 +129,18 @@ body{
   font-size: 35px;
   color: green;
 }
+
+.open-book{
+  background-color: #849a8a;
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 10px;
+  padding: 1em 2em;
+}
+
+.open-book-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
