--- a/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.html
+++ b/LivroMente_FRONT/src/app/views/painel-adm/painel-adm.component.html
@@ -2,7 +2,8 @@
     <div class="sidebar">
         <img src="assets/Logo.png" alt="Menu Image">
         <ul>
-            <li><a href="/painel">Home</a></li>
+            <li><a href="">Início</a></li>         
+            <li><a href="/painel">Painel</a></li>
             <li><a href="/livros">Livros</a></li>
             <li><a href="/pedidos">Pedidos</a></li>
         </ul>
