--- a/LivroMente_FRONT/src/app/views/admin/orders/orders.component.html
+++ b/LivroMente_FRONT/src/app/views/admin/orders/orders.component.html
@@ -1,7 +1,8 @@
 <div class="sidebar">
     <img src="assets/Logo.png" alt="Menu Image">
     <ul>
-        <li><a href="/painel">Home</a></li>
+        <li><a href="">Início</a></li>
+        <li><a href="/painel">Painel</a></li>
         <li><a href="/livros">Livros</a></li>
         <li><a href="/pedidos">Pedidos</a></li>
     </ul>
@@ -62,8 +63,8 @@
             [pageSize]="pageSize"
             [pageSizeOptions]="[5, 10, 20]"
             (page)="onPageChange($event)"
-                           showFirstLastButtons
-                           aria-label="Select page of periodic elements">
+                          
+            aria-label="Select page of periodic elements">
             </mat-paginator>
         </div>
     </main>
